commit pour changement d'ordi, v1 pcb

--- a/Schémas Electriques/Schémas V3 - Routage/PCB3 - 5x5 - placement V1.PcbDoc.htm
+++ b/Schémas Electriques/Schémas V3 - Routage/PCB3 - 5x5 - placement V1.PcbDoc.htm
@@ -100,12 +100,12 @@
             <tr class="front_matter">
             <td class="front_matter_column1">Time</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3">22:43:48</td>
+            <td class="front_matter_column3">22:44:48</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Filename</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3"><a href="file://C:\Users\Quentin\Desktop\Projet-Balise\Schémas Electriques\Altium\Lib\Lib\pcb_peb_1.PcbLib" class="file"><acronym title="C:\Users\Quentin\Desktop\Projet-Balise\Schémas Electriques\Altium\Lib\Lib\pcb_peb_1.PcbLib">C:\Users\Quentin\Desktop\Projet-Balise\Schémas Electriques\Altium\Lib\Lib\pcb_peb_1.PcbLib</acronym></a></td>
+            <td class="front_matter_column3"><a href="file://C:\Users\Quentin\Desktop\Projet-Balise\Schémas Electriques\Schémas V3 - Routage\PCB3 - 5x5 - placement V1.PcbDoc" class="file"><acronym title="C:\Users\Quentin\Desktop\Projet-Balise\Schémas Electriques\Schémas V3 - Routage\PCB3 - 5x5 - placement V1.PcbDoc">C:\Users\Quentin\Desktop\Projet-Balise\Schémas Electriques\Schémas V3 - Routage\PCB3 - 5x5 - placement V1.PcbDoc</acronym></a></td>
             </tr>
         </table>
         
@@ -120,6 +120,34 @@
             <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
                 <td class="column1">Release 10</td>
                 <td class="column2"><b>CAUTION</b> - New Custom Grids and Guides were introduced. Be aware that your design might contain Custom Grids and Guides that cannot be read in previous versions. </td>
+            </tr>
+            <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
+                <td class="column1">Release 10</td>
+                <td class="column2"><b>CAUTION</b> - New Structured Clusters were introduced. Be aware that your design might contain Structured Clusters that cannot be read in previous versions. </td>
+            </tr>
+            <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
+                <td class="column1">Release 10</td>
+                <td class="column2"><b>CAUTION</b> - New PCB 3D Movie Manager was introduced. Be aware that your design might contain 3D PCB movie that cannot be read in previous versions. </td>
+            </tr>
+            <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
+                <td class="column1">Release 10 update 1</td>
+                <td class="column2"><b>CAUTION</b> - New Clearance Rule subscopes targeting differential pairs  were introduced. Be aware that your design might contain Clearance Rules using those subscopes that cannot be read in previous versions. </td>
+            </tr>
+            <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
+                <td class="column1">Release 10 update 15</td>
+                <td class="column2"><b>CAUTION</b> - Support of Solder Mask and Paste Mask expansions for Tracks, Arcs, Fills and Regions was introduced. Be aware that your design might contain Solder Mask and Paste Mask expansions for these types of primitives that cannot be read in the version of Altium Designer you are currently using. </td>
+            </tr>
+            <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
+                <td class="column1">Altium Designer update 19</td>
+                <td class="column2"><b>CAUTION</b> - Air Gap Width attribute was introduced to Polygon Connect Style Rule. Be aware that your design might contain Polygon Connect Style Rules with new Air Gap Width attribute cannot be read in the version of Altium Designer you are currently using. </td>
+            </tr>
+            <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
+                <td class="column1">Release 13</td>
+                <td class="column2"><b>CAUTION</b> - Silk To Solder Mask Clearance Rules are converted to Silkscreen Over Component Pads Rules.</td>
+            </tr>
+            <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
+                <td class="column1">Release 14</td>
+                <td class="column2"><b>CAUTION</b> - The Differential Pairs Routing rule added support for control of the width. Be aware that these widths must be manually entered as Width rules in this version.</td>
             </tr>
         </table>
         <br><hr>
